docs/api/qiskit/0.19/qiskit.quantum_info.ScalarOp.mdx
---
title: ScalarOp (v0.19)
description: API reference for qiskit.quantum_info.ScalarOp in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.ScalarOp
---

# ScalarOp

<Class id="qiskit.quantum_info.ScalarOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/quantum_info/operators/scalar_op.py" signature="ScalarOp(dims, coeff=1)" modifiers="class">
  Scalar identity operator class.

  This is a symbolic representation of an scalar identity operator on multiple subsystems. It may be used to initialize a symbolic scalar multiplication of an identity and then be implicitly converted to other kinds of operator subclasses by using the [`compose()`](qiskit.quantum_info.ScalarOp#compose "qiskit.quantum_info.ScalarOp.compose"), [`dot()`](qiskit.quantum_info.ScalarOp#dot "qiskit.quantum_info.ScalarOp.dot"), [`tensor()`](qiskit.quantum_info.ScalarOp#tensor "qiskit.quantum_info.ScalarOp.tensor"), [`expand()`](qiskit.quantum_info.ScalarOp#expand "qiskit.quantum_info.ScalarOp.expand") methods.

  Initialize an operator object.

  **Parameters**

  *   **dims** (*int or tuple*) – subsystem dimensions.
  *   **coeff** (*Number*) – scalar coefficient for the identity operator (Default: 1).

  **Raises**

  **QiskitError** – If the optional coefficient is invalid.

  ## Attributes

  <span id="scalarop-atol" />

  ### atol

  <Attribute id="qiskit.quantum_info.ScalarOp.atol">
    The default absolute tolerance parameter for float comparisons.
  </Attribute>

  <span id="scalarop-coeff" />

  ### coeff

  <Attribute id="qiskit.quantum_info.ScalarOp.coeff">
    Return the coefficient
  </Attribute>

  <span id="scalarop-dim" />

  ### dim

  <Attribute id="qiskit.quantum_info.ScalarOp.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  <span id="scalarop-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.ScalarOp.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  <span id="scalarop-qargs" />

  ### qargs

  <Attribute id="qiskit.quantum_info.ScalarOp.qargs">
    Return the qargs for the operator.
  </Attribute>

  <span id="scalarop-rtol" />

  ### rtol

  <Attribute id="qiskit.quantum_info.ScalarOp.rtol">
    The relative tolerance parameter for float comparisons.
  </Attribute>

  ## Methods

  <span id="scalarop-call" />

  ### \_\_call\_\_

  <Function id="qiskit.quantum_info.ScalarOp.__call__" signature="ScalarOp.__call__(qargs)">
    Return a clone with qargs set
  </Function>

  <span id="scalarop-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.quantum_info.ScalarOp.__mul__" signature="ScalarOp.__mul__(other)" />

  <span id="scalarop-add" />

  ### add

  <Function id="qiskit.quantum_info.ScalarOp.add" signature="ScalarOp.add(other)">
    Return the linear operator self + other.

    DEPRECATED: use `operator + other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self + other.

    **Return type**

    BaseOperator
  </Function>

  <span id="scalarop-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.ScalarOp.adjoint" signature="ScalarOp.adjoint()">
    Return the adjoint of the operator.
  </Function>

  <span id="scalarop-compose" />

  ### compose

  <Function id="qiskit.quantum_info.ScalarOp.compose" signature="ScalarOp.compose(other, qargs=None, front=False)">
    Return the composed operator.

    **Parameters**

    *   **other** (*BaseOperator*) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The operator self @ other.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if other has incompatible dimensions for specified subsystems.

    #### Additional Information:

    Composition (`@`) is defined as left matrix multiplication for matrix operators. That is that `A @ B` is equal to `B * A`. Setting `front=True` returns right matrix multiplication `A * B` and is equivalent to the [`dot()`](qiskit.quantum_info.ScalarOp#dot "qiskit.quantum_info.ScalarOp.dot") method.
  </Function>

  <span id="scalarop-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.ScalarOp.conjugate" signature="ScalarOp.conjugate()">
    Return the conjugate of the operator.
  </Function>

  <span id="scalarop-copy" />

  ### copy

  <Function id="qiskit.quantum_info.ScalarOp.copy" signature="ScalarOp.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="scalarop-dot" />

  ### dot

  <Function id="qiskit.quantum_info.ScalarOp.dot" signature="ScalarOp.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** (*BaseOperator*) – an operator object.
    *   **qargs** (*list or None*) – a list of subsystem positions to apply other on. If None apply on all subsystems \[default: None].

    **Returns**

    The operator self \* other.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.
  </Function>

  <span id="scalarop-expand" />

  ### expand

  <Function id="qiskit.quantum_info.ScalarOp.expand" signature="ScalarOp.expand(other)">
    Return the tensor product operator other ⊗ self.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    if other is an ScalarOp. BaseOperator: if other is not an ScalarOp.

    **Return type**

    [ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")
  </Function>

  <span id="scalarop-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.ScalarOp.input_dims" signature="ScalarOp.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="scalarop-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.ScalarOp.is_unitary" signature="ScalarOp.is_unitary(atol=None, rtol=None)">
    Return True if operator is a unitary matrix.
  </Function>

  <span id="scalarop-multiply" />

  ### multiply

  <Function id="qiskit.quantum_info.ScalarOp.multiply" signature="ScalarOp.multiply(other)">
    Return the linear operator other \* self.

    DEPRECATED: use `other * operator` instead.

    **Parameters**

    **other** (*complex*) – a complex number.

    **Returns**

    the linear operator other \* self.

    **Return type**

    BaseOperator

    **Raises**

    **NotImplementedError** – if subclass does not support multiplication.
  </Function>

  <span id="scalarop-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.ScalarOp.output_dims" signature="ScalarOp.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="scalarop-power" />

  ### power

  <Function id="qiskit.quantum_info.ScalarOp.power" signature="ScalarOp.power(n)">
    Return the power of the ScalarOp.

    **Parameters**

    **n** (*Number*) – the exponent for the scalar op.

    **Returns**

    the `coeff ** n` ScalarOp.

    **Return type**

    [ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")

    **Raises**

    **QiskitError** – if the input and output dimensions of the operator are not equal, or the power is not a positive integer.
  </Function>

  <span id="scalarop-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.ScalarOp.reshape" signature="ScalarOp.reshape(input_dims=None, output_dims=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    #### Arg:

    #### input\_dims (None or tuple): new subsystem input dimensions.

    If None the original input dims will be preserved \[Default: None].

    #### output\_dims (None or tuple): new subsystem output dimensions.

    If None the original output dims will be preserved \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="scalarop-set-atol" />

  ### set\_atol

  <Function id="qiskit.quantum_info.ScalarOp.set_atol" signature="ScalarOp.set_atol(value)" modifiers="classmethod">
    Set the class default absolute tolerance parameter for float comparisons.
  </Function>

  <span id="scalarop-set-rtol" />

  ### set\_rtol

  <Function id="qiskit.quantum_info.ScalarOp.set_rtol" signature="ScalarOp.set_rtol(value)" modifiers="classmethod">
    Set the class default relative tolerance parameter for float comparisons.
  </Function>

  <span id="scalarop-subtract" />

  ### subtract

  <Function id="qiskit.quantum_info.ScalarOp.subtract" signature="ScalarOp.subtract(other)">
    Return the linear operator self - other.

    DEPRECATED: use `operator - other` instead.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    the operator self - other.

    **Return type**

    BaseOperator
  </Function>

  <span id="scalarop-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.ScalarOp.tensor" signature="ScalarOp.tensor(other)">
    Return the tensor product operator self ⊗ other.

    **Parameters**

    **other** (*BaseOperator*) – an operator object.

    **Returns**

    if other is an ScalarOp. BaseOperator: if other is not an ScalarOp.

    **Return type**

    [ScalarOp](qiskit.quantum_info.ScalarOp "qiskit.quantum_info.ScalarOp")
  </Function>

  <span id="scalarop-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.quantum_info.ScalarOp.to_matrix" signature="ScalarOp.to_matrix()">
    Convert to a Numpy matrix.
  </Function>

  <span id="scalarop-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.ScalarOp.to_operator" signature="ScalarOp.to_operator()">
    Convert to an Operator object.
  </Function>

  <span id="scalarop-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.ScalarOp.transpose" signature="ScalarOp.transpose()">
    Return the transpose of the operator.
  </Function>
</Class>

